# xmega-cpp17

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
bsp/: CMakeLists.txt  README.md  board.cpp  board.h  board.hpp
bsp/UTH/: CMakeLists.txt  board.cpp  board.hpp
bsp/XPLAINA1U/: CMakeLists.txt  board.cpp  board.hpp
bsp/avr-libstdcpp/: CMakeLists.txt  README.md
bsp/hal/: CMakeLists.txt  README.md  device.hpp  expected.hpp  gpio.hpp  mio.hpp  pin_types.hpp  register.cpp  register.hpp
bsp/hal/atxmega128a1u/: AES.hpp  EBI.hpp  FUSE.hpp  HIRES.hpp  IRCOM.hpp  MCU.hpp  OSC.hpp  PORTCFG.hpp  PR.hpp  RTC.hpp  USB.hpp  device.hpp
bsp/hal/atxmega128a4u/: AC.hpp  AWEX.hpp  DFLL.hpp  DMA.hpp  EVSYS.hpp  FUSE.hpp  LOCKBIT.hpp  PORT.hpp  RST.hpp  SIGROW.hpp  SLEEP.hpp  TC.hpp  TWI.hpp  USART.hpp  WDT.hpp
bsp/hal/atxmega256a3u/: ADC.hpp  CLK.hpp  CPU.hpp  CRC.hpp  DAC.hpp  GPIO.hpp  LOCKBIT.hpp  NVM.hpp  PMIC.hpp  PORTCFG.hpp  PR.hpp  SPI.hpp  TC2.hpp  VPORT.hpp  XOCD.hpp  device.hpp
bsp/hal/drivers/: adc.hpp  clk.hpp  flash.hpp  led.hpp  spi.hpp  twi.hpp  uart.h  uart.hpp
bsp/hal/nonstd/: ArrayWrapper.hpp  expected.hpp  span-lite.hpp  span.hpp  static_vector.hpp
bsp/hal/peripherals/: AC.hpp  ADC.hpp  AES.hpp  AWEX.hpp  CLK.hpp  CPU.hpp  CRC.hpp  DAC.hpp  DFLL.hpp  DMA.hpp  EBI.hpp  EVSYS.hpp  FUSE.hpp  GPIO.hpp  HIRES.hpp  IRCOM.hpp  LOCKBIT.hpp  MCU.hpp  NVM.hpp  OSC.hpp  PMIC.hpp  PORT.hpp  PORTCFG.hpp  PR.hpp  RST.hpp  RTC.hpp  SIGROW.hpp  SLEEP.hpp  SPI.hpp  TC.hpp  TC2.hpp  TWI.hpp  USART.hpp  USB.hpp  VPORT.hpp  WDT.hpp  XOCD.hpp
bsp/nonstd/: cstdio.hpp
bsp/peripherals/: peripheral_types.hpp
bsp/peripherals/motion/: BMA250X.hpp
bsp/peripherals/rtc/: PCF85063.hpp
bsp/printf/: CMakeLists.txt
scripts/: avr-gcc.cmake  avr-toolchain.cmake  linker_report.py  python_version.py
scripts/html/: index.html  sequences.js
